tests/files/parser_tests/should_fail/103.cmdr
//Should not parse incorrect import format
import true;